1. Add data_uart

--- a/dts/arm/nsing/n32g430/n32g430-pinctrl.dtsi
+++ b/dts/arm/nsing/n32g430/n32g430-pinctrl.dtsi
@@ -23,6 +23,13 @@
 		};
 	};
 
+	usart2_pa6_pa7: usart2_pa6_pa7 {
+		group1{
+			pinmuxs = <&pinctrl USART2_TX_PA6>,
+				<&pinctrl USART2_RX_PA7>;
+		};
+	};
+
 	i2c1_pb6_pb7: i2c1_pb6_pb7 {
 		group1{
 			pinmuxs = <&pinctrl I2C1_SCL_PB6>,
