--- a/gaz/prj.conf
+++ b/gaz/prj.conf
@@ -23,3 +23,6 @@ CONFIG_HEAP_MEM_POOL_SIZE=1024
 CONFIG_CFB_LOG_LEVEL_DBG=n
 CONFIG_CHARACTER_FRAMEBUFFER=y
 CONFIG_CHARACTER_FRAMEBUFFER_USE_DEFAULT_FONTS=n
+
+CONFIG_ZCBOR=y
+CONFIG_CRC=y
